--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
