--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
@@ -23,6 +26,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
