--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "formik": "^2.4.3",
     "next": "^13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -30,6 +31,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   }
 }
